Fixed template to work on all versions

--- a/templates/sudoers.j2
+++ b/templates/sudoers.j2
@@ -13,4 +13,4 @@ Defaults	{{ dp }}
 # User privilege specification
 root    ALL=(ALL:ALL) ALL
 
-@includedir /etc/sudoers.d
+#includedir /etc/sudoers.d
